# archelyst-backend

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  GETTING_STARTED.md  NEO4J_SETUP.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: auto-assign.yml  ci.yml  task-automation.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  ai.py  market.py  neo4j_test.py  search.py  securities.py
app/core/: __init__.py  config.py  database.py  deps.py  security.py
app/middleware/: __init__.py  caching.py
app/schemas/: README.md  __init__.py  ai.py  base.py  examples.py  market.py  market_broken.py.bak  market_data.py  openapi_examples.py  securities.py  usage_guide.md  users.py  validation_examples.py
app/services/: __init__.py  cache.py  market_data.py  rate_limiter.py
app/services/ai_providers/: __init__.py
app/services/data_providers/: __init__.py  base.py  config.py  factory.py  fmp.py  yfinance.py
app/workers/: __init__.py  celery_app.py  tasks.py
scripts/: init-db.sql  neo4j-init.cypher  verify-setup.sh
tests/: __init__.py
tests/test_api/: test_search_endpoints.py
tests/test_data_providers/: __init__.py  test_fmp.py  test_yfinance.py
tests/test_services/: test_cache.py  test_market_data.py
